src/codegen/tests/snapshots/rusty__codegen__tests__vla_tests__multi_dimensional_vla.snap
---
source: src/codegen/tests/vla_tests.rs
expression: res
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%__foo_vla = type { ptr, [4 x i32] }

define signext i16 @foo(ptr %0) {
entry:
  %foo = alloca i16, align [filtered]
  %vla = alloca %__foo_vla, align [filtered]
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %vla, ptr align [filtered] %0, i64 ptrtoint (ptr getelementptr (%__foo_vla, ptr null, i32 1) to i64), i1 false)
  store i16 0, ptr %foo, align [filtered]
  %vla_arr_gep = getelementptr inbounds nuw %__foo_vla, ptr %vla, i32 0, i32 0
  %vla_arr_ptr = load ptr, ptr %vla_arr_gep, align [filtered]
  %dim_arr = getelementptr inbounds nuw %__foo_vla, ptr %vla, i32 0, i32 1
  %start_idx_ptr0 = getelementptr inbounds [4 x i32], ptr %dim_arr, i32 0, i32 0
  %end_idx_ptr0 = getelementptr inbounds [4 x i32], ptr %dim_arr, i32 0, i32 1
  %start_idx_value0 = load i32, ptr %start_idx_ptr0, align [filtered]
  %end_idx_value0 = load i32, ptr %end_idx_ptr0, align [filtered]
  %start_idx_ptr1 = getelementptr inbounds [4 x i32], ptr %dim_arr, i32 0, i32 2
  %end_idx_ptr1 = getelementptr inbounds [4 x i32], ptr %dim_arr, i32 0, i32 3
  %start_idx_value1 = load i32, ptr %start_idx_ptr1, align [filtered]
  %end_idx_value1 = load i32, ptr %end_idx_ptr1, align [filtered]
  %1 = sub i32 %end_idx_value0, %start_idx_value0
  %len_dim0 = add i32 1, %1
  %2 = sub i32 %end_idx_value1, %start_idx_value1
  %len_dim1 = add i32 1, %2
  %accum = alloca i32, align [filtered]
  store i32 1, ptr %accum, align [filtered]
  %load_accum = load i32, ptr %accum, align [filtered]
  %product = mul i32 %load_accum, %len_dim1
  store i32 %product, ptr %accum, align [filtered]
  %accessor_factor = load i32, ptr %accum, align [filtered]
  %adj_access0 = sub i32 2, %start_idx_value0
  %adj_access1 = sub i32 -1, %start_idx_value1
  %accum1 = alloca i32, align [filtered]
  store i32 0, ptr %accum1, align [filtered]
  %multiply = mul i32 %adj_access0, %accessor_factor
  %load_accum2 = load i32, ptr %accum1, align [filtered]
  %accumulate = add i32 %load_accum2, %multiply
  store i32 %accumulate, ptr %accum1, align [filtered]
  %multiply3 = mul i32 %adj_access1, 1
  %load_accum4 = load i32, ptr %accum1, align [filtered]
  %accumulate5 = add i32 %load_accum4, %multiply3
  store i32 %accumulate5, ptr %accum1, align [filtered]
  %accessor = load i32, ptr %accum1, align [filtered]
  %arr_val = getelementptr inbounds i16, ptr %vla_arr_ptr, i32 %accessor
  store i16 1, ptr %arr_val, align [filtered]
  %foo_ret = load i16, ptr %foo, align [filtered]
  ret i16 %foo_ret
}

define i32 @main() {
entry:
  %main = alloca i32, align [filtered]
  %arr = alloca [20 x i16], align [filtered]
  call void @llvm.memset.p0.i64(ptr align [filtered] %arr, i8 0, i64 ptrtoint (ptr getelementptr ([20 x i16], ptr null, i32 1) to i64), i1 false)
  store i32 0, ptr %main, align [filtered]
  %auto_deref = load [20 x i16], ptr %arr, align [filtered]
  %outer_arr_gep = getelementptr inbounds [20 x i16], ptr %arr, i32 0, i32 0
  %vla_struct = alloca %__foo_vla, align [filtered]
  %vla_array_gep = getelementptr inbounds nuw %__foo_vla, ptr %vla_struct, i32 0, i32 0
  %vla_dimensions_gep = getelementptr inbounds nuw %__foo_vla, ptr %vla_struct, i32 0, i32 1
  store [4 x i32] [i32 0, i32 4, i32 -2, i32 1], ptr %vla_dimensions_gep, align [filtered]
  store ptr %outer_arr_gep, ptr %vla_array_gep, align [filtered]
  %0 = load %__foo_vla, ptr %vla_struct, align [filtered]
  %vla_struct_ptr = alloca %__foo_vla, align [filtered]
  store %__foo_vla %0, ptr %vla_struct_ptr, align [filtered]
  %call = call signext i16 @foo(ptr %vla_struct_ptr)
  %main_ret = load i32, ptr %main, align [filtered]
  ret i32 %main_ret
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i64, i1 immarg) #0

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #1

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
attributes #1 = { nocallback nofree nounwind willreturn memory(argmem: write) }
